--- a/index.html
+++ b/index.html
@@ -4,26 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/index.css">
-    <link rel="stylesheet" href="/Component/Component.css">
+    <link rel="stylesheet" href="./Component/Component.css">
     <title>Document</title>
 </head>
 <body>
     <div class="page">
         <div class="page__header">
             <div class="header__left-side">
-                <button class="component__round-button"><img src="/img/button_img/burger.png"  alt=""></button>
+                <button class="component__round-button"><img src="./img/button_img/burger.png"  alt="button-menu"></button>
                 <div class="component__decor-line"></div>
-                <div class="component__logo"></div>
+                <div class="component__logo"><img src="./img/logo.png" alt="logo"></div>
             </div>
             <div class="header__right-side">
-                <button class="component__round-button component__round-button__vanish"><img src="/img/button_img/call.png" alt=""></button>
-                <button class="component__round-button component__round-button__vanish"><img src="/img/button_img/chat.png" alt=""></button>
-                <button class="component__round-button component__round-button__vanish"><img src="/img/button_img/profile.png" alt=""></button>  
+                <button class="component__round-button component__round-button__hiden"><img src="./img/button_img/call.png" alt="button-phone"></button>
+                <button class="component__round-button component__round-button__hiden"><img src="./img/button_img/chat.png" alt="button-chat"></button>
+                <button class="component__round-button component__round-button__hiden"><img src="./img/button_img/profile.png" alt="button-profile"></button>  
                 <div class="component__decor-line component__decor-line__margin"></div> 
                 <span class="right-side__text-for-buton">Оставить отзыв</span>
-                <button class="component__round-button"><img src="/img/button_img/repair.png" alt="123123"></button>
+                <button class="component__round-button"><img src="./img/button_img/repair.png" alt="button-repair"></button>
                 <span class="right-side__text-for-buton">Статус ремонта</span>
-                <button class="component__round-button"><img src="/img/button_img/checkstatus.png" alt="12312"></button>
+                <button class="component__round-button"><img src="./img/button_img/checkstatus.png" alt="button-checkstatus"></button>
             </div>
         </div>
             <div class="page__title">
@@ -46,11 +46,11 @@
                             <p>Мы успешно работаем с 1992 года и заслужили репутацию надежного партнера, что подтверждает большое количество постоянных клиентов. Мы гордимся тем, что к нам обращаются по рекомендациям и, в свою очередь, советуют нас родным и близким.</p>
                         </div>
                         <div class="leftside__btnnext">
-                            <img src="/img/button_img/btn_chitat'_dal'she.jpg" width="16px" height="16px"  alt="" >Читать далее
+                            <img src="./img/button_img/btn_chitat'_dal'she.jpg" width="16px" height="16px"  alt="img-for-button-chitat'-dal'she" >Читать далее
                         </div>
                     </div>
                     <div class="content__rightside">
-                        <img src="/img/content_img2.png" alt="">
+                        <img src="./img/content_img2.png" alt="content-img">
                     </div>
                 </div>
     </div>
