--- a/mobile-menu.html
+++ b/mobile-menu.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>mobile-menu</title>
     <link rel="stylesheet" href="./Component/Component.css">
+    <link rel="stylesheet" href="./css/mobile-menu_style.css">
 </head>
 <body>
     <div class="menu">
@@ -16,7 +17,7 @@
         </header>
         <nav class="menu__nav">
             <ul class="nav__link">
-                <li><a href="#">Ремонт техники</a></li>
+                <li class="link__btn"><a href="#">Ремонт техники</a></li>
                 <li><a href="#">Услуги и сервисы</a></li>
                 <li><a href="#">Корпоративным клиентам</a></li>
                 <li><a href="#">Продавцам техники</a></li>
@@ -33,13 +34,28 @@
                 <button class="component__round-button"><img src="./img/button_img/profile.png" alt="профиль"></button>
             </div>
             <div class="footer__info">
-                <p>mail@cps.com</p>
-                <p>8 800 890 8900</p>
+                <p class="info__mail">mail@cps.com</p>
+                <p class="info__number">8 800 890 8900</p>
             </div>
             <div class="footer__lang-menu">
-                <button></button>
-                <button></button>
-                <button></button>
+                <button class="lang-menu__btn">RU</button>
+                <button class="lang-menu__btn">EN</button>
+                <button class="lang-menu__btn">CH</button>
+            </div>
+            <!-- незнаю как лучше -->
+            <div class="footer__lang-menu2">
+                    <label class="lang-menu__radio">
+                        <input class="radio__input ru" name="lang" type="radio" checked>
+                        <span class="radio__box">RU</span>
+                    </label>
+                    <label class="lang-menu__radio">
+                        <input class="radio__input en" name="lang" type="radio">
+                        <span class="radio__box">EN</span>
+                    </label>
+                    <label class="lang-menu__radio">
+                        <input class="radio__input ch" name="lang" type="radio">
+                        <span class="radio__box">CH</span>
+                    </label>
             </div>
         </footer>
     </div>
